--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777777;
+    color: #B37997;
     background: url("../images/concrete_seamless.png");
   }
   
