--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777777;
-    background: url("../images/concrete_seamless.png");
+    color: #B37997;
+    background-color: #4aaaa5;
   }
   
   * {
@@ -59,7 +59,7 @@ body {
     margin: 0 0 30px;
     overflow: auto;
     color: #ffffff;
-    background: #ffffff;
+    background: #663B51;
     border-bottom: 2px solid #cccccc;
   }
   
@@ -131,7 +131,7 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #ffffff;
+    background: #663B51;
     border: 1px solid #dddddd;
   }
   
@@ -245,3 +245,6 @@ body {
           .wrapper {
             width: 600px; 
           }
+        }
+      }
+}
