--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ body {
   
   #main-container {
     padding-top: 130px;
-    min-height: calc(100vh - 70px);
   }
   
   .main-section {
@@ -221,30 +220,29 @@ body {
 @media screen and (max-width: 980px) {
     body {
       background-color: hotpink;
-      width: 50%;
+      width: 100%;
       padding:10px;
     }
-    .wrapper {
-      width: 600px;
+    /* .wrapper {
+      width: 600px; */
     }
     @media screen and (max-width: 768px) {
         body {
           background-color: blue;
-          width: 50%;
+          width: 100%;
           padding:10px;
         }
-        .wrapper {
-          width: 600px;
-        }
-        @media screen and (max-width: 640px) {
+        /* .wrapper {
+          width: 600px; */
+        /* } */
+        @media screen and (max-width: 375px) {
           body {
             background-color: peru;
-            width: 50%;
-            padding:10px
+            width: 100%;
+            padding:10px;
+            margin-top: 10px;
           }
-          .wrapper {
-            width: 600px; 
-          }
+         
         }
       }
-}
+/* } */
